force-app/main/default/objects/Data_Contract__c/Data_Contract__c.object-meta.xml
<CustomObject>
    <description>Custom Object created to store data from Contracts related to Due Diligences processes. US SWSS-648.</description>
    <label>Dados do Contrato</label>
    <nameField>
        <displayFormat>DC# {00000000}</displayFormat>
        <label>Data Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dados dos Contratos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>