force-app/main/default/objects/Data_Contract__c/fields/Address_DD__c.field-meta.xml
<CustomField>
    <fullName>Address_DD__c</fullName>
    <description>Field created at User Story SWSS-648</description>
    <label>Endereço</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>