force-app/main/default/objects/Data_Contract__c/fields/Brokerage_Agreement_DD__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Agreement_DD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field created at User Story SWSS-648</description>
    <label>Termo de Corretagem</label>
    <type>Checkbox</type>
</CustomField>