force-app/main/default/objects/Data_Contract__c/fields/Buyer_DD__c.field-meta.xml
<CustomField>
    <fullName>Buyer_DD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field created at User Story SWSS-648</description>
    <label>Comprador</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dados dos Contratos</relationshipLabel>
    <relationshipName>Dados_dos_Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>