force-app/main/default/objects/Data_Contract__c/fields/Cancelation_Date_DD__c.field-meta.xml
<CustomField>
    <fullName>Cancelation_Date_DD__c</fullName>
    <description>Field created at User Story SWSS-648</description>
    <label>Data Cancelamento</label>
    <type>DateTime</type>
</CustomField>