force-app/main/default/objects/Data_Contract__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field created at User Story SWSS-648</description>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Dados dos Contratos</relationshipLabel>
    <relationshipName>Data_Contracts_DD</relationshipName>
    <type>Lookup</type>
</CustomField>