force-app/main/default/objects/Data_Contract__c/fields/CCV_Creation_Date_DD__c.field-meta.xml
<CustomField>
    <fullName>CCV_Creation_Date_DD__c</fullName>
    <description>Field created at User Story SWSS-648</description>
    <label>Data CCV Criado</label>
    <type>DateTime</type>
</CustomField>