force-app/main/default/objects/Data_Contract__c/fields/Contract_Request_Date_DD__c.field-meta.xml
<CustomField>
    <fullName>Contract_Request_Date_DD__c</fullName>
    <description>Field created at User Story SWSS-648</description>
    <label>Data Solicitação Contrato</label>
    <type>DateTime</type>
</CustomField>