force-app/main/default/objects/Data_Contract__c/fields/Email_EN_DD__c.field-meta.xml
<CustomField>
    <fullName>Email_EN_DD__c</fullName>
    <description>Field created at User Story SWSS-648. Email used by Negotiation Executives.</description>
    <label>Email do EN</label>
    <type>TextArea</type>
</CustomField>