force-app/main/default/objects/Data_Contract__c/fields/Event_Type_DD__c.field-meta.xml
<CustomField>
    <fullName>Event_Type_DD__c</fullName>
    <description>Field created at User Story SWSS-648</description>
    <label>Tipo do Evento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CONTRACT_REQUEST</fullName>
            </value>
            <value>
                <fullName>CCV_SENT</fullName>
            </value>
            <value>
                <fullName>DILIGENCE_CHANGED</fullName>
            </value>
            <value>
                <fullName>CCV_SIGNED</fullName>
            </value>
            <value>
                <fullName>CCV_CANCELLED</fullName>
            </value>
            <value>
                <fullName>OFFER_CANCELLED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>