force-app/main/default/objects/Data_Contract__c/fields/Fees_DD__c.field-meta.xml
<CustomField>
    <fullName>Fees_DD__c</fullName>
    <description>Field created at User Story SWSS-648</description>
    <label>Comissão</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>