force-app/main/default/objects/Data_Contract__c/fields/HUB_DD__c.field-meta.xml
<CustomField>
    <fullName>HUB_DD__c</fullName>
    <label>HUB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Independent Agents;</fullName>
            </value>
            <value>
                <fullName>TBD;</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>