force-app/main/default/objects/Data_Contract__c/fields/Inscription_Link_DD__c.field-meta.xml
<CustomField>
    <fullName>Inscription_Link_DD__c</fullName>
    <description>Field created at User Story SWSS-648</description>
    <label>Link da Matrícula</label>
    <type>Url</type>
</CustomField>