force-app/main/default/objects/Data_Contract__c/fields/Last_Event_Date_DD__c.field-meta.xml
<CustomField>
    <fullName>Last_Event_Date_DD__c</fullName>
    <description>Field created at User Story SWSS-648</description>
    <label>Data Último Evento</label>
    <type>DateTime</type>
</CustomField>