force-app/main/default/objects/Data_Contract__c/fields/Negotiation_Executive_DD__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Executive_DD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executivo de Negociação</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dados dos Contratos (Executivo de Negociação)</relationshipLabel>
    <relationshipName>Dados_dos_Contratos1</relationshipName>
    <type>Lookup</type>
</CustomField>