force-app/main/default/objects/Data_Contract__c/fields/Offer_ID_DD__c.field-meta.xml
<CustomField>
    <fullName>Offer_ID_DD__c</fullName>
    <description>Field created at User Story SWSS-648</description>
    <label>Offer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>