force-app/main/default/objects/Data_Contract__c/fields/Original_Payload_DD__c.field-meta.xml
<CustomField>
    <fullName>Original_Payload_DD__c</fullName>
    <description>Field created at User Story SWSS-648</description>
    <label>Payload Original</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>