force-app/main/default/objects/Data_Contract__c/fields/Payment_Method_DD__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_DD__c</fullName>
    <label>Método de Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CASH</fullName>
            </value>
            <value>
                <fullName>CASH_USING_FGTS</fullName>
            </value>
            <value>
                <fullName>FINANCED</fullName>
            </value>
            <value>
                <fullName>FINANCED_USING_FGTS</fullName>
            </value>
            <value>
                <fullName>FINANCED_USING_THIRD_COMPANY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>