force-app/main/default/objects/Data_Contract__c/fields/Primary_Market_DD__c.field-meta.xml
<CustomField>
    <fullName>Primary_Market_DD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field created at User Story SWSS-705</description>
    <label>Mercado Primário</label>
    <type>Checkbox</type>
</CustomField>