force-app/main/default/objects/Data_Contract__c/fields/Seller_DD__c.field-meta.xml
<CustomField>
    <fullName>Seller_DD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendedor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dados dos Contratos (Vendedor)</relationshipLabel>
    <relationshipName>Data_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>