force-app/main/default/objects/Data_Contract__c/fields/Signture_Date_DD__c.field-meta.xml
<CustomField>
    <fullName>Signture_Date_DD__c</fullName>
    <description>Field created at User Story SWSS-648</description>
    <label>Data Assinatura</label>
    <type>DateTime</type>
</CustomField>