force-app/main/default/objects/Data_Contract__c/fields/Status_CCV_DD__c.field-meta.xml
<CustomField>
    <fullName>Status_CCV_DD__c</fullName>
    <description>Field created at User Story SWSS-648</description>
    <label>Status CCV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enviado para fila</fullName>
            </value>
            <value>
                <fullName>Enviado para assinatura</fullName>
            </value>
            <value>
                <fullName>Assinado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>