force-app/main/default/objects/Data_Contract__c/fields/UF_DD__c.field-meta.xml
<CustomField>
    <fullName>UF_DD__c</fullName>
    <label>UF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>